--- a/style.css
+++ b/style.css
@@ -7,111 +7,50 @@
 body {
 	min-height: 100vh;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	padding: 5rem 0;
 }
 
-h1 {
-	text-align: center;
+td {
+	max-width: 8em;
+	word-wrap: break-word;
 }
 
-/* Start Pure CSS Table */
-
-.table {
-	display: table;
-	width: 55%;
-	border: 1px solid #000;
-	margin-top: 30px;
-}
-
-.tableBody {
-	display: table-row-group;
-}
-
-.tableRow {
-	display: table-row;
-}
-
-.tableCell,
-.tableHead {
-	display: table-cell;
-	padding: 15px 10px;
-	border: 1px solid #000;
-}
-
-.tableHead {
-	font-weight: bold !important;
-	border-bottom: 5px solid #000;
-}
-
-.tableCell {
-	vertical-align: middle;
-}
-
-.tableCell img {
-	width: 15rem;
-}
-
-.tableCell:first-child {
-	text-align: center;
-}
-
-/* Resolusi Smartphone & Tablet */
 @media (max-width: 768px) {
-	body {
-		padding: 2rem 0;
+	.mobile-responsive {
+		max-width: 100%;
 	}
 
-	h1 {
-		padding: 2rem;
-	}
-
-	.table {
-		width: 75%;
-		border: none;
-		margin-top: 0;
-	}
-
-	.tableHead {
+	thead {
 		display: none;
 	}
 
-	.tableRow {
+	tbody {
 		display: flex;
 		flex-direction: column;
+		gap: 35px;
 	}
 
-	.tableCell {
+	.table > :not(:first-child) {
 		border-top: none;
-		border-right: 1px solid #000;
-		border-bottom: none;
-		border-left: 1px solid #000;
-		padding: 0.7em;
-		text-align: center;
 	}
 
-	.tableCell img {
-		margin: 8px 0;
-	}
-
-	.tableCell:first-child {
-		border-top: 1px solid #000;
-		margin-top: 25px;
-	}
-
-	.tableCell:last-child {
-		border-bottom: 1px solid #000;
-		margin-bottom: 15px;
-	}
-
-	.tableCell::before {
+	td {
 		display: flex;
-		justify-content: center;
-		content: attr(data-header);
+		flex: 1;
+		border-bottom: 2px solid #eee !important;
+		max-width: 100%;
+		word-wrap: normal;
+	}
+
+	td span {
+		max-width: 11em;
+		word-wrap: break-word;
+	}
+
+	td::before {
+		flex: 2;
 		font-weight: bold;
+		content: attr(data-header);
 	}
 }
-
-/* End Pure CSS Table */
